--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gosocial",
   "version": "0.1.0",
+  "homepage": "http://Krrish105.github.io/GoSocial-Landing-Page",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
@@ -10,7 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "sass": "^1.49.9",
+    "gh-pages": "^3.2.3",
     "swiper": "^8.0.6",
     "web-vitals": "^2.1.4"
   },
@@ -19,7 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sass" : "sass src/Sass:src/Css --watch --no-source-map"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
